# LTPTextDetectorTraining

./: CMakeLists.txt  README.md
detector/: Adaboost.h  BaseFeature.h  ConfigManager.h  DetectorCommon.h  Feature.h  FeatureGenerator.h  HogFeature.h  IntegralFeature.h  IntegralImageUtils.h  LbpFeature.h  Node.h  Tree.h  config.h
detector/serialization/: std_shared_ptr.hpp
src/: .LbpFeature.cpp.swp  Adaboost.cpp  BaseFeature.cpp  ConfigManager.cpp  Feature.cpp  FeatureGenerator.cpp  HogFeature.cpp  IntegralFeature.cpp  IntegralImageUtils.cpp  LbpFeature.cpp  Node.cpp  Tree.cpp  main.cpp
tests/: AdaboostPredictTest.cpp  CMakeLists.txt  DollarRandomTest.cpp  FeatureComputerTest.cpp  FeatureComputerTest.h  HogFeatureComputerTest.cpp  LbpFeatureTests.cpp  OptimizeTreeTest.cpp  SonarDatasetTest.cpp  blub.py  sonar2.csv  test_main.cpp  util.cpp  util.h
